# Facultate-AN-1-si-AN-2

Ema/: Lab3P11.sh
Ema/Algoritmi si Programare/ExamenAP/: main.py
Ema/Crypto/Lab1/: main  main.cpp
Ema/Lab1P1Ema/: README.md
Ema/Lab1P1Ema/src/: first.java
Ema/Lab1P2Ema/src/: second.java
Ema/Lab4OS/: G13.sh  S13.sh  file1.txt  file2.txt
Sem 1/Documente/: Descriere Bosch Future Mobility.docx  Descriere Bosch Future Mobility.pages  Formular-studenti-instructaj-introductiv-general-2022.docx  Formular-studenti-instructaj-introductiv-general-2022.pages
Sem 1/Informatica/Seminarii Rezolvate/: S4.rar
Sem 3/Criptografie cu Cheie Publica/Lab1/: main  main.cpp
Sem 3/Ecuatii Diferentiale/: TestPractic.mw  lab2.mw  lab3 1.mw  lab3.mw  lab4 1.mw  lab5.mw  lab6mateip.mw
Sem 4/Complemente de Geometrie/: Presentation 2 - Seminar 9.docx
Sem 4/Sisteme de Operare/: A6.doc  assignment_4.doc  awk.docx  exam_model_problems.docx  processes_lab_flow.docx  programming_c.docx
Sem 4/Sisteme de Operare/lab7/: P13  (+2 more)
Sem2/OOP/Labs/Lab 11-12-13/OOP Extra 4/: Bonus 4.cpp  CMakeLists.txt  OOP Extra 4.sln  OOP Extra 4.vcxproj  OOP Extra 4.vcxproj.filters  knn.cpp  knn.h  matrix.cpp  matrix.h  naiveBayes.cpp  naiveBayes.h
Sem2/OOP/Labs/Lab 11-12-13/OOP Extra 4/x64/Debug/: OOP Extra 4.exe.recipe  OOP Extra 4.ilk  OOP Extra 4.vcxproj.FileListAbsolute.txt  vc143.idb
Sem2/OOP/Labs/Lab 11-12-13/OOP Extra 4/x64/Debug/OOP Extra 4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OOP Extra 4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+1426 files in other folders)
